--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     HTML5 is lastest version.
     <br>
     <a href="http://www.never.com">네이버</a><br>
-    <img src="img/pic01.jpg" alt="www이미지" width="400" height="300">
+    <img src="img/pic01.png" alt="www이미지" width="400" height="300">
     <p>
     HTML5
     <P>
@@ -46,7 +46,7 @@
     <a href="mailto:someone@example.com">Send email</a>
     <br>
     <a href="http://www.w3.org">
-         <img src="img/pic02.png"  alt="html5아이콘">
+         <img src="img/pic02.jpg"  alt="html5아이콘">
     </a>
    <br>
    <table border="1" width="500" height="300">
